--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "express": "~4.14.0",
+    "lodash": "^4.17.4",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
